--- a/hilt-mvvm/app/build.gradle
+++ b/hilt-mvvm/app/build.gradle
@@ -3,6 +3,8 @@ plugins {
   id 'kotlin-android'
   id 'kotlin-kapt'
   id 'dagger.hilt.android.plugin'
+  id 'androidx.navigation.safeargs.kotlin'
+  id 'kotlin-parcelize'
 }
 
 android {
@@ -33,6 +35,7 @@ android {
   }
   buildFeatures {
     dataBinding true
+    viewBinding true
   }
 }
 
@@ -45,6 +48,7 @@ dependencies {
   implementation 'androidx.legacy:legacy-support-v4:1.0.0'
   implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
   implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+  implementation 'androidx.recyclerview:recyclerview:1.2.1'
   testImplementation 'junit:junit:4.+'
   androidTestImplementation 'androidx.test.ext:junit:1.1.3'
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -68,7 +72,6 @@ dependencies {
   // Navigation
   implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
   implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
-
   // Feature module Support
   implementation("androidx.navigation:navigation-dynamic-features-fragment:$nav_version")
 
@@ -78,6 +81,7 @@ dependencies {
   // Coil
   implementation("io.coil-kt:coil:1.3.2")
   implementation("io.coil-kt:coil-svg:1.3.2")
+  implementation("io.coil-kt:coil-gif:1.3.2")
 
 
 
